# haven

./: .gitattribute  .gitattributes  .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.rs  dune-project  dune-workspace  haven.opam  http.js  ichor.opam  out.js  rt.c  server.erl  showcase  sketch.hv  t.ich  temp.js  test.ixc  test_ptr.ixc  test_shortcircuit.ixc  test_stereo_simd.ixc  test_while.ixc  test_width.ixc  update_todo.py
.github/: FUNDING.yml
.github/workflows/: docs.yml
bins/havenc/: Cargo.toml  build.rs
bins/havenc/src/: main.rs
bins/havenc/tests/: harness.rs
bins/havenc/tests/cases/: bless.sh
bins/havenc/tests/cases/fail/: test_enum_bad_repr.hv  test_enum_data_argtype.hv  test_enum_data_bare_variant.hv  test_enum_data_ctor_arity.hv  test_enum_data_export.hv  test_enum_data_export_badfield.hv  test_enum_data_export_norepr.hv  test_enum_data_match_arity.hv  test_enum_dup_variant.hv  test_enum_struct_variant_badbind.hv  test_enum_struct_variant_field.hv  test_enum_struct_variant_tuple_braces.hv  test_enum_unknown_variant.hv  test_generic_enum_bare_unit.hv  test_generic_enum_ctor_arity.hv  test_generic_enum_no_turbofish.hv  test_generic_enum_nonexhaustive.hv  test_generic_struct_const_badsize.hv  test_generic_struct_construct_nongeneric.hv  test_match_arm_after_wildcard.hv  test_match_nonexhaustive_enum.hv  test_match_nonexhaustive_int.hv  test_pub_private_selective.hv  test_pub_private_whole.hv
bins/havenc/tests/cases/run/: test_bitwise.hv  test_bitwise.out  test_const_array.hv  test_const_generics.hv  test_enum.hv  test_enum.out  test_enum_data.hv  test_enum_data.out  test_enum_data_export.hv  test_enum_data_export.out  test_enum_generic_payload.hv  test_enum_generic_payload.out  test_enum_struct_variant.hv  test_enum_struct_variant.out  test_fn_as_value_xmod.hv  test_fn_as_value_xmod.out  test_fnptr.hv  test_generic_enum.hv  test_generic_enum.out  test_generic_enum_struct_variant.hv  test_generic_struct_field.hv  test_generic_struct_field.out  test_generic_struct_mono.hv  test_match.hv  test_match.out  test_ptr_ptr_index.hv  test_ptr_ptr_index.out  test_pub_private_local.hv  test_qualified_import.hv  test_qualified_import.out  test_string.hv  test_string.out  test_struct_sret.out  test_width.hv
bins/noirc/: Cargo.toml
bins/noirc/src/: args.rs  main.rs
bins/noirc/tests/: harness.rs
bins/noirc/tests/cases/: bless.sh
bins/noirc/tests/cases/fail/: test_missing_return.nr  test_pub_private_whole.nr  test_turbofish_unknown_fn.nr
bins/noirc/tests/cases/run/: test_alloc.nr  test_const_generics.out  test_fn_as_value_xmod.nr  test_generic_struct_const.nr  test_generic_struct_const.out  test_generic_struct_decl.nr  test_generic_struct_generic_fn.out  test_generic_struct_mangle.nr  test_generic_struct_mono.out  test_generics.out  test_loop_aggregate_literals.nr  test_loop_aggregate_literals.out  test_shadowing.nr  test_shortcircuit.nr  test_struct.out  test_struct_nested.nr  test_struct_nested.out  test_width.nr  test_width.out
core/: basehttp.ich  io.ich  num.ich
crt/: prelude.ixc  rt.c
docs/: book.toml
examples/: 0_hello.ixc  1_showcase.c  1_showcase.ixc  1_showcase.nr  1_showcase_raylib.c  2_showcase_raylib.hv  2_showcase_raylib.ixc  2_showcase_raylib.nr  3_clap.hv  _t.ich  client.ich  closure.hvn  closure.ich  cons.ich  destructure.ich  fetch.ich  fib.hvn  fib.ich  funcomp.ich  http.ich  list.hvn  list.ich  option.ich  record.ich  server.erl  sketch.hvn  t.erl  t.ich  temp.ich
ichor/: io.ich  prelude.ich
lib/: common.ml  comp.ml  core.hvn  dune  infer.ml  lex.ml  list.hvn  loc.ml  norm.ml  parse.ml  report.ml  typed.ml  utils.ml
src/: args.rs  ast.rs  cc.ml  common.ml  comp.ml  core.ml  diag.rs  dune  infer.ml  intrinsics.rs  layout.rs  lex.ml  llvm.rs  loc.ml  main.ml  main.rs  mil.rs  module.rs  mono.rs  norm.ml  opt.ml  parse.ml  parse.rs  prelude.js  report.ml  safecheck.rs  scheme.ml  typecheck.rs  types.ml  utils.ml
std/: alloc.hv  alloc.ixc  alloc.nr  basefetch.ich  basehttp.ich  io.ich  list.ich  math.hv  math.ixc  math.nr  num.ich  option.hv  option.nr  prelude.hv  prelude.ixc  prelude.nr  simd.hv  string.hv  vec.hv  vec.ixc  vec.nr
tests/: escape.ich  harness.rs  lib_test.c  listty.ich  match.ich  num.ich  shadow.ich  temp.ich  test.ixc  test_alloc_check.ixc  test_arrayslice.ixc  test_fastmath.ixc  test_generics.ixc  test_stereo_simd.ixc  test_str.ixc  test_struct.ixc  test_struct_nested.ixc  test_struct_sret.ixc  test_while.ixc  test_width.ixc
(+167 files in other folders)
