[package]
name = "ixc"
version = "0.1.0"
edition = "2024"

[build-dependencies]
cc = "1.2.65"

[dependencies]
ariadne = "0.6.0"
bumpalo = "3.20.3"
include_dir = "0.7.4"
chumsky = { git = "https://codeberg.org/zesterer/chumsky", rev = "dd46ce3def", features = ["pratt"] }
clap = { version = "4.6.1", features = ["derive"] }
tempfile = "3.27.0"

[dev-dependencies]
libtest-mimic = "0.8"

# Custom test harness (tests/harness.rs): discovers .ixc fixtures under
# tests/cases/ and reports one named case per file.
[[test]]
name = "harness"
harness = false
