[workspace]
resolver = "2"
members = [
    "crates/noir_common",
    "crates/noir_front",
    "crates/noir_mid",
    "crates/noir_back",
    "bins/noirc",
    "bins/noirdoc",
]

# Shared dependency versions, inherited by members via `{ workspace = true }`.
[workspace.dependencies]
noir_common = { path = "crates/noir_common" }
noir_front = { path = "crates/noir_front" }
noir_mid = { path = "crates/noir_mid" }
noir_back = { path = "crates/noir_back" }

ariadne = "0.6.0"
bumpalo = "3.20.3"
include_dir = "0.7.4"
chumsky = { git = "https://codeberg.org/zesterer/chumsky", rev = "dd46ce3def", features = ["pratt"] }
clap = { version = "4.6.1", features = ["derive"] }
tempfile = "3.27.0"
cc = "1.2.65"
libtest-mimic = "0.8"

[workspace.package]
version = "0.1.0"
edition = "2024"
