[workspace]
resolver = "2"
members = [
    "crates/haven_common",
    "crates/haven_front",
    "crates/haven_mid",
    "crates/haven_back",
    "bins/havenc",
    "bins/havendoc",
]

# Shared dependency versions, inherited by members via `{ workspace = true }`.
[workspace.dependencies]
haven_common = { path = "crates/haven_common" }
haven_front = { path = "crates/haven_front" }
haven_mid = { path = "crates/haven_mid" }
haven_back = { path = "crates/haven_back" }

ariadne = "0.6.0"
bumpalo = "3.20.3"
include_dir = "0.7.4"
chumsky = { git = "https://codeberg.org/zesterer/chumsky", rev = "dd46ce3def", features = ["pratt"] }
clap = { version = "4.6.1", features = ["derive"] }
tempfile = "3.27.0"
cc = "1.2.65"
libtest-mimic = "0.8"

[workspace.package]
version = "0.1.0"
edition = "2024"
