(lang dune 3.16)

(name haven)

(generate_opam_files true)

(source
 (github azur1s/haven))

(authors "Azur1s")

(maintainers "Azur1s")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name haven)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
