[package]
name = "havenc"
version.workspace = true
edition.workspace = true

[[bin]]
name = "havenc"
path = "src/main.rs"

[build-dependencies]
cc.workspace = true

[dependencies]
haven_common.workspace = true
haven_front.workspace = true
haven_mid.workspace = true
haven_back.workspace = true
bumpalo.workspace = true
clap.workspace = true
tempfile.workspace = true

[dev-dependencies]
libtest-mimic.workspace = true

# Custom test harness (tests/harness.rs): discovers .hv fixtures under
# tests/cases/ and reports one named case per file.
[[test]]
name = "harness"
harness = false
