[package]
name = "noirc"
version.workspace = true
edition.workspace = true

[[bin]]
name = "noirc"
path = "src/main.rs"

[build-dependencies]
cc.workspace = true

[dependencies]
noir_common.workspace = true
noir_front.workspace = true
noir_mid.workspace = true
noir_back.workspace = true
bumpalo.workspace = true
clap.workspace = true
tempfile.workspace = true

[dev-dependencies]
libtest-mimic.workspace = true

# Custom test harness (tests/harness.rs): discovers .nr fixtures under
# tests/cases/ and reports one named case per file.
[[test]]
name = "harness"
harness = false
